--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/marked": "0.6.1",
     "@types/mini-css-extract-plugin": "0.2.0",
     "@types/mkdirp-promise": "5.0.0",
+    "@types/mockdate": "^2.0.0",
     "@types/mz": "0.0.32",
     "@types/node": "10.12.21",
     "@types/optimize-css-assets-webpack-plugin": "1.3.4",
@@ -143,6 +144,7 @@
     "message-port-polyfill": "^0.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mkdirp-promise": "^5.0.1",
+    "mockdate": "^2.0.2",
     "mutation-observer": "^1.0.3",
     "mz": "^2.7.0",
     "node-sass": "^4.11.0",
